# matrix-starter

./: README.md
.github/workflows/: build.yml
config/: gatorgrade.yml
matrix/: .pylintrc  pyproject.toml
matrix/input/: matrix.txt
matrix/matrix/: main.py
matrix/tests/: test_matrix.py
writing/: reflection.md
